--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.3.2",
+    "@tanstack/react-query": "^5.8.2",
+    "axios": "^1.6.2",
     "firebase": "^10.7.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -18,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.3",
     "react-hook-form": "^7.48.2",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
     "react-simple-captcha": "^9.3.0",
     "react-star-rating-input": "^8.0.1",
